remake issues